[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cenas/TelaOpções/Options.gd" type="Script" id=1]
[ext_resource path="res://Fontes/marcellus-sc.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://imagens/Logo do Jogo/Logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.25
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 12.0
margin_bottom = 462.0
color = Color( 0.164706, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.5
margin_top = -93.5
margin_right = 193.5
margin_bottom = 93.5
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_video" type="Button" parent="."]
margin_left = 50.0
margin_top = 150.0
margin_right = 140.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 4 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_audio" type="Button" parent="."]
margin_left = 150.0
margin_top = 150.0
margin_right = 240.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 5 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_volta" type="Button" parent="."]
margin_left = 250.0
margin_top = 150.0
margin_right = 340.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 6 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cntrl_video" type="Control" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 151.0
margin_bottom = 449.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_resulucao" type="OptionButton" parent="Cntrl_video"]
margin_left = 50.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 70.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_fullscreen" type="OptionButton" parent="Cntrl_video"]
margin_left = 50.0
margin_top = 100.0
margin_right = 220.0
margin_bottom = 120.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cntrl_audio" type="Control" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 151.0
margin_bottom = 449.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_musica_mute" type="Button" parent="Cntrl_audio"]
margin_left = 50.0
margin_top = 50.0
margin_right = 200.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "Volume Música"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sldr_musica" type="HSlider" parent="Cntrl_audio/btn_musica_mute"]
margin_left = 200.0
margin_right = 370.0
margin_bottom = 24.0
min_value = -35.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Cntrl_audio/btn_musica_mute/sldr_musica" to="." method="_on_sldr_musica_value_changed"]
